--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href='looks.css'>
   </head>
   <body>
-    <div id="gameBoundary">
-      <div id="gameCharacter"></div>
-    </div>
+    <table id="gameBoundary"></table>
     <script src="brain/main.js"></script>
   </body>
 </html>
