--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <table id="gameBoundary"></table>
+    <div id="minimap"></div>
     <script src="brain/main.js"></script>
   </body>
 </html>
